Added NagoyaU naming authority

--- a/site/pages/services/naming-authority.hbs
+++ b/site/pages/services/naming-authority.hbs
@@ -99,6 +99,11 @@ priority when assigning a naming authority, as follows:
 				Website: <a class="ext" href=" https://space.fmi.fi/">https://space.fmi.fi/</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/FMI">https://github.com/hpde/FMI</a>
 				</td></tr>
+<tr><td valign="top">GMU</td><td>George Mason University<br>
+				Assigns resource IDs for data available from George Mason University.<br>
+				Website: <a class="ext" href=" http://solar.gmu.edu/heliophysics">http://solar.gmu.edu/heliophysics</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/GMU">https://github.com/hpde/GMU</a>
+				</td></tr>
 <tr><td valign="top">GBO</td><td>Ground Based Observatories<br>
 				Assigns resource IDs for data available from the ground based observatories (GBO).<br>
 				Website: <a class="ext" href=" http://vspo.gsfc.nasa.gov">http://vspo.gsfc.nasa.gov</a>
@@ -133,6 +138,11 @@ priority when assigning a naming authority, as follows:
 				Assigns resource IDs for data available from the Korean Astronomy and Space Science Institute (KASI).<br>
 				Website: <a class="ext" href=" https://www.kasi.re.kr/eng/index">https://www.kasi.re.kr/eng/index</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/KASI">https://github.com/hpde/KASI</a>
+				</td></tr>
+<tr><td valign="top">NagoyaU</td><td>Nagoya University<br>
+				Nagoya University is a Japanese national university located in Nagoya, Aichi prefecture, Japan.<br>
+				Website: <a class="ext" href=" https://en.nagoya-u.ac.jp/">https://en.nagoya-u.ac.jp/</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/NagoyaU">https://github.com/hpde/NagoyaU</a>
 				</td></tr>
 <tr><td valign="top">NASA</td><td>National Aeronautics and Space Administration<br>
 				Assigns resource IDs for data generated through the National Aeronautics and Space Administration (NASA).<br>
