Updated the Naming Authority list

--- a/site/pages/services/naming-authority.hbs
+++ b/site/pages/services/naming-authority.hbs
@@ -69,6 +69,11 @@ priority when assigning a naming authority, as follows:
 				Website: <a class="ext" href=" http://ccmc.gsfc.nasa.gov/">http://ccmc.gsfc.nasa.gov/</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/CCMC">https://github.com/hpde/CCMC</a>
 				</td></tr>
+<tr><td valign="top">CFA</td><td>The Center for Astrophysics of Harvard & Smithsonian<br>
+				Assigns resource IDs for data registered in the The Center for Astrophysics of Harvard & Smithsonian (CFA).<br>
+				Website: <a class="ext" href=" https://www.harvard.edu/">https://www.harvard.edu/</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/CFA">https://github.com/hpde/CFA</a>
+				</td></tr>
 <tr><td valign="top">CNES</td><td>Centre National d'Etudes Spatiales<br>
 				Assigns resource IDs for data available from the Centre National d'Etudes Spatiales (CNES).<br>
 				Website: <a class="ext" href=" https://cnes.fr/en">https://cnes.fr/en</a>
@@ -89,6 +94,11 @@ priority when assigning a naming authority, as follows:
 				Website: <a class="ext" href=" https://www.dlr.de/">https://www.dlr.de/</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/DLR">https://github.com/hpde/DLR</a>
 				</td></tr>
+<tr><td valign="top">DOD</td><td>Department of Defense<br>
+				Assigns resource IDs for data registered in the Department of Defense (DOD).<br>
+				Website: <a class="ext" href=" https://www.dlr.de/">https://www.dlr.de/</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/DOD">https://github.com/hpde/DOD</a>
+				</td></tr>
 <tr><td valign="top">ESA</td><td>European Space Agency<br>
 				Assigns resource IDs for data available from the European Space Agency (ESA).<br>
 				Website: <a class="ext" href=" http://www.esa.int/ESA">http://www.esa.int/ESA</a>
@@ -99,18 +109,23 @@ priority when assigning a naming authority, as follows:
 				Website: <a class="ext" href=" https://space.fmi.fi/">https://space.fmi.fi/</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/FMI">https://github.com/hpde/FMI</a>
 				</td></tr>
-<tr><td valign="top">GMU</td><td>George Mason University<br>
-				Assigns resource IDs for data available from George Mason University.<br>
-				Website: <a class="ext" href=" http://solar.gmu.edu/heliophysics">http://solar.gmu.edu/heliophysics</a>
-				Metadata Repository: <a class="ext" href="https://github.com/hpde/GMU">https://github.com/hpde/GMU</a>
-				</td></tr>
 <tr><td valign="top">GBO</td><td>Ground Based Observatories<br>
 				Assigns resource IDs for data available from the ground based observatories (GBO).<br>
 				Website: <a class="ext" href=" http://vspo.gsfc.nasa.gov">http://vspo.gsfc.nasa.gov</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/GBO">https://github.com/hpde/GBO</a>
 				</td></tr>
+<tr><td valign="top">GMU</td><td>George Mason University<br>
+				Assigns resource IDs for data available from George Mason University.<br>
+				Website: <a class="ext" href=" http://solar.gmu.edu/heliophysics">http://solar.gmu.edu/heliophysics</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/GMU">https://github.com/hpde/GMU</a>
+				</td></tr>
+<tr><td valign="top">GONG</td><td>Global Oscillation Network Group<br>
+				Assigns resource IDs for data available from the Global Oscillation Network Group (GONG).<br>
+				Website: <a class="ext" href=" https://gong.nso.edu/">https://gong.nso.edu/</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/GONG">https://github.com/hpde/GONG</a>
+				</td></tr>
 <tr><td valign="top">INAF</td><td>Istituto Nazionale Di Astrofisica<br>
-				Assigns resource IDs for data available from the Istituto Nazionale Di Astrofisica (National Institue for Astrophysics).<br>
+				Assigns resource IDs for data available from the Istituto Nazionale Di Astrofisica (INAF).<br>
 				Website: <a class="ext" href=" http://www.inaf.it/">http://www.inaf.it/</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/INAF">https://github.com/hpde/INAF</a>
 				</td></tr>
@@ -118,6 +133,11 @@ priority when assigning a naming authority, as follows:
 				Assigns resource IDs for data available from the Institut national des sciences de l'Univers (INSU).<br>
 				Website: <a class="ext" href=" https://www.insu.cnrs.fr/">https://www.insu.cnrs.fr/</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/INSU">https://github.com/hpde/INSU</a>
+				</td></tr>
+<tr><td valign="top">IRF</td><td>Swedish institute for space physics<br>
+				Assigns resource IDs for data available from Swedish institute for space physics(IRF).<br>
+				Website: <a class="ext" href=" https://www.irf.se/">https://www.irf.se/</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/IRF">https://github.com/hpde/IRF</a>
 				</td></tr>
 <tr><td valign="top">ISWI</td><td>International Space Weather Initiative<br>
 				Assigns resource IDs for data available from the International Space Weather Initiative (ISWI).<br>
@@ -127,7 +147,7 @@ priority when assigning a naming authority, as follows:
 <tr><td valign="top">IUGONET</td><td>Inter-university Upper atmosphere Global Observation NETwork<br>
 				Assigns resource IDs for data available from the Inter-university Upper atmosphere Global Observation NETwork (IUGONET).<br>
 				Website: <a class="ext" href=" http://www.iugonet.org/">http://www.iugonet.org/</a>
-				Metadata Repository: <a class="ext" href="http://search.iugonet.org/list.jsp">http://search.iugonet.org/list.jsp</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/IUGONET">https://github.com/hpde/IUGONET</a>
 				</td></tr>
 <tr><td valign="top">JAXA</td><td>Japan Aerospace Exploration Agency<br>
 				Assigns resource IDs for data available from the Japan Aerospace Exploration Agency (JAXA).<br>
@@ -139,10 +159,10 @@ priority when assigning a naming authority, as follows:
 				Website: <a class="ext" href=" https://www.kasi.re.kr/eng/index">https://www.kasi.re.kr/eng/index</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/KASI">https://github.com/hpde/KASI</a>
 				</td></tr>
-<tr><td valign="top">NagoyaU</td><td>Nagoya University<br>
-				Nagoya University is a Japanese national university located in Nagoya, Aichi prefecture, Japan.<br>
-				Website: <a class="ext" href=" https://en.nagoya-u.ac.jp/">https://en.nagoya-u.ac.jp/</a>
-				Metadata Repository: <a class="ext" href="https://github.com/hpde/NagoyaU">https://github.com/hpde/NagoyaU</a>
+<tr><td valign="top">KSB-ROB</td><td>Royal Observatory of Belgium<br>
+				SPASE resource descriptions with Royal Observatory of Belgium naming authority.<br>
+				Website: <a class="ext" href=" https://www.astro.oma.be/en">https://www.astro.oma.be/en</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/KSB-ROB">https://github.com/hpde/KSB-ROB</a>
 				</td></tr>
 <tr><td valign="top">NASA</td><td>National Aeronautics and Space Administration<br>
 				Assigns resource IDs for data generated through the National Aeronautics and Space Administration (NASA).<br>
@@ -158,6 +178,11 @@ priority when assigning a naming authority, as follows:
 				Assigns resource IDs for data available from the National Science Foundation (NSF).<br>
 				Website: <a class="ext" href=" https://www.nsf.gov/">https://www.nsf.gov/</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/NSF">https://github.com/hpde/NSF</a>
+				</td></tr>
+<tr><td valign="top">NagoyaU</td><td>Nagoya University<br>
+				Nagoya University is a Japanese national university located in Nagoya, Aichi prefecture, Japan.<br>
+				Website: <a class="ext" href=" https://en.nagoya-u.ac.jp/">https://en.nagoya-u.ac.jp/</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/NagoyaU">https://github.com/hpde/NagoyaU</a>
 				</td></tr>
 <tr><td valign="top">SMWG</td><td>SPASE Metadata Working Group<br>
 				The community location for entities such as persons, observatories, instruments, repositories, registries and services.<br>
