Updated links to web editor and validator

--- a/site/pages/docs/index.hbs
+++ b/site/pages/docs/index.hbs
@@ -118,7 +118,7 @@ For a complete complete list of naming authorities see <a href="{{assets}}/servi
 <div class='boxed'>
 <h2>RELATED ITEMS</h2>
 <ul class='side_nav'>
-	<li><a href="http://validator.spase-group.org/">Metadata Validation</a></li>
+	<li><a href="https//spase-validator.heliocloud.org/">Metadata Validation</a></li>
 	<li><a href="{{assets}}/tools/editor/index.html">Metadata Editor</a></li>
 	<li><a target="_blank" href="http://release.igpp.ucla.edu/igpp/docgen/">Document Generator <i class='fa fa-external-link'></i></a></li>
 	<li><a target="_blank" href="https://github.com/hpde">Metadata Repository <i class='fa fa-external-link'></i></a></li>
