--- a/site/pages/tools/editor/index.hbs
+++ b/site/pages/tools/editor/index.hbs
@@ -21,7 +21,7 @@ title: SPASE Editor
       the XML representation of the description.
    </p>
    <p>
-     <a target='_blank' href="https://xmleditor.spase-utilities.org/">Web-based editor</a> - Resource descriptions for observed data, simulations and models, plus generated results.
+     <a target='_blank' href="https://spase-editor.heliocloud.org/">Web-based editor</a> - Resource descriptions for observed data, simulations and models, plus generated results.
    </p>
    <p>
       This tool was developed by NASA's SPASE Metadata Working Team (SWMT).
