--- a/site/pages/tools/resource/index.hbs
+++ b/site/pages/tools/resource/index.hbs
@@ -92,7 +92,7 @@ The SPASE resource tools are open source. Source code and additional documentati
 <ul class='side_nav'>
 	<li><a href="{{assets}}/services/naming-authority.html">List of Naming Authorities</a></li>
 	<li><a href="../stylesheet/index.html">XML Stylesheets</a></li>
-	<li><a href="http://validator.spase-group.org/">Metadata Validator</a></li>
+	<li><a href="https://spase-validator.heliocloud.org/">Metadata Validator</a></li>
 	<li><a href="{{assets}}/tools/editor/index.html">Metadata Editor</a></li>
 </ul>
 </div>
