--- a/site/layout/default.hbs
+++ b/site/layout/default.hbs
@@ -104,7 +104,7 @@ Space Physics Archive Search and Extract
 			<ul class='subnav'>
 				<li><a href='{{assets}}/tools/index.html' target='_self'>Overview</a></li>
 				<li><a href='{{assets}}/tools/viewer/index.html' target='_self'>Viewer</a></li>
-				<li><a target='_blank' href='http://validator.spase-group.org/' target='_self'>Validator</a></li>
+				<li><a target='_blank' href='https://spase-validator.heliocloud.org/' target='_self'>Validator</a></li>
 				<li><a href='{{assets}}/tools/editor/index.html' target='_self'>Editor</a></li>
 				<li><a href='{{assets}}/tools/resource/index.html' target='_self'>Resource Tools</a></li>
 				<li><a href='{{assets}}/tools/registry/index.html' target='_self'>Registry Server</a></li>
