--- a/site/pages/data/index.hbs
+++ b/site/pages/data/index.hbs
@@ -149,7 +149,7 @@ terms from the SPASE Simulation Extension Dictionary along with terms from the B
 	<div class='boxed'>
 		<h2>Related Items</h2>
 		<ul class='side_nav'>
-			<li><a href="http://validator.spase-group.org/">Metadata Validator</a></li>
+			<li><a href="https://spase-validator.heliocloud.org/">Metadata Validator</a></li>
 			<li><a href="{{assets}}/tools/editor/index.html">Metadata Editor</a></li>
 			<li><a href="{{assets}}/tools/resource/index.html">Resource Tools</a></li>
 			<li><a href="http://release.igpp.ucla.edu/igpp/docgen/">Document Generator <i class='fa fa-external-link'></i></a></li>
