--- a/site/pages/tools/index.hbs
+++ b/site/pages/tools/index.hbs
@@ -28,7 +28,7 @@ title: SPASE Tools
 	<dt id="validator"><b>Validator</b></dt>
 		<dd>Determines compliance with SPASE data model.<br><br>
    		<dl>
-   			<dt><a href="http://validator.spase-group.org/">XML Validate</a></dt>
+   			<dt><a href="https://spase-validator.heliocloud.org/">XML Validate</a></dt>
    			<dd>Test a web accessible SPASE description against a selected version of the data dictionary.</dd>
    		</dl>
 		</dd> 
@@ -89,7 +89,7 @@ title: SPASE Tools
 <h2>Commonly Used Tools</h2>
 <ul class='side_nav'>
 	<li><a href="editor/index.html">Metadata Editor</a></li>
-	<li><a href="http://validator.spase-group.org/">Metadata Validator</a></li>
+	<li><a href="https://spase-validator.heliocloud.org/">Metadata Validator</a></li>
 </ul>
 </div>
 </aside>
