--- a/site/pages/services/naming-authority.hbs
+++ b/site/pages/services/naming-authority.hbs
@@ -46,7 +46,8 @@ priority when assigning a naming authority, as follows:
 </p>
 <ol>
 <li>Major oversight/funding agency (CNES, ESA, JAXA, NASA, NOAA, NSF,…etc.) for resources from missions, observatories, instruments or investigations that fall well within an agency management;</li>
-<li>Overall long-term project name (e.g., ISWI, GONG, IUGONET, Nançay,…etc.) when an infrastructure-like project receives multiple sponsorships or has multiple partners that are separately funded. </li>
+<li>Agencies or organizations that jointly commissioned a resource with their acronyms listed in the order specified by the agencies in agreement and separated by hyphens;</li>
+<li>Overall long-term project name (e.g., ISWI, GONG, IUGONET, Nançay,…etc.) when an infrastructure-like project receives multiple sponsorships or has multiple partners that are separately funded.</li>
 <li>Instrument PI institution if none of the above applies.</li>
 <li>SMWG will continue to be the Naming Authority for Person resources.</li>
 
