Added -latest pdf, xsd, json files and links

--- a/site/pages/data/model/index.hbs
+++ b/site/pages/data/model/index.hbs
@@ -22,9 +22,9 @@ title: SPASE Base Model
 	<p><b>Current Release</b> is
 	{{current.version}}
 	(<a target="_blank" href="./spase-{{current.version}}/index.html">HTML</a>
-	<a target="_blank" href="./spase-{{current.version}}.pdf">PDF</a>
-	<a target="_blank" href="../schema/spase-{{current.version}}.xsd">XSD</a>
-	<a target="_blank" href="./spase-{{current.version}}.json">JSON</a>),
+	<a target="_blank" href="./spase-latest.pdf">PDF</a>
+	<a target="_blank" href="../schema/spase-latest.xsd">XSD</a>
+	<a target="_blank" href="./spase-latest.json">JSON</a>),
 	released: {{current.released}},
 	<a href="history.html">History of changes</a>
 	</p>
