--- a/site/pages/data/schema/index.hbs
+++ b/site/pages/data/schema/index.hbs
@@ -35,8 +35,8 @@ There exists an XML Schema document for each version of the SPASE data model.
 	<p><b>Current Release</b> is
 	<a target="_blank" href="../model/spase-{{current.version}}/index.html">{{current.version}}</a> 
 	(<a target="_blank" href="../model/spase-{{current.version}}/index.html">HTML</a>
-	 <a target="_blank" href="../model/spase-{{current.version}}.pdf">PDF</a>
-	 <a target="_blank" href="../schema/spase-{{current.version}}.xsd">XSD</a>),
+	 <a target="_blank" href="../model/spase-latest.pdf">PDF</a>
+	 <a target="_blank" href="../schema/spase-latest.xsd">XSD</a>),
 	released: {{current.released}},
 	<a href="../model/history.html">History of changes</a>
 	</p>
