--- a/site/pages/services/naming-authority.hbs
+++ b/site/pages/services/naming-authority.hbs
@@ -104,6 +104,11 @@ priority when assigning a naming authority, as follows:
 				Website: <a class="ext" href=" http://www.esa.int/ESA">http://www.esa.int/ESA</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/ESA">https://github.com/hpde/ESA</a>
 				</td></tr>
+<tr><td valign="top">ESA-NASA</td><td>ESA and NASA missions<br>
+				Assigns resource IDs for data available from ESA-NASA shared missions.<br>
+				Website: <a class="ext" href=" http://www.esa.int/ESA">http://www.esa.int/ESA</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/ESA">https://github.com/hpde/ESA-NASA</a>
+				</td></tr>
 <tr><td valign="top">FMI</td><td>Finnish Meteorlogical Institute<br>
 				Assigns resource IDs for data available from the Finnish Meteorlogical Institute (FMI) Space and Earth Observation Centre.<br>
 				Website: <a class="ext" href=" https://space.fmi.fi/">https://space.fmi.fi/</a>
@@ -193,6 +198,11 @@ priority when assigning a naming authority, as follows:
 				Assigns resource IDs for data available from the University of Oulu (UOULU).<br>
 				Website: <a class="ext" href=" http://www.spase-group.org/registry">http://www.spase-group.org/registry</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/UOULU">https://github.com/hpde/UOULU</a>
+				</td></tr>
+<tr><td valign="top">Community</td><td>Community<br>
+				The community location for groups of individuals or affinity associations.<br>
+				Website: <a class="ext" href=" http://www.spase-group.org/registry">http://www.spase-group.org/registry</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/UOULU">https://github.com/hpde/Community</a>
 				</td></tr>
 		</table>			
 	</dd>
