Updated hpde.io link after domain hijacking

--- a/site/pages/index.hbs
+++ b/site/pages/index.hbs
@@ -117,7 +117,7 @@ which can be used to share information and data, as well as construct Virtual Ob
 SPASE provides a few community wide services which includes maintaining the list of <a href="{{assets}}/services/naming-authority.html">naming authorities</a> 
 and administers the <a target="_blank" href="https://github.com/hpde/SMWG">metadata repository</a> containing descriptions of common entities 
 (Observatory, Instrument, Person, Service, Repository). SPASE also administers the metadata repositories available 
-on <a target="_blank" href="https://github.com/hpde/">Github</a> which can be viewed at the <a href="https://hpde.io">HPDE</a> landing pages.</div>
+on <a target="_blank" href="https://github.com/hpde/">Github</a> which can be viewed at the <a href="https://hpde1.net">HPDE</a> landing pages.</div>
 </div>
 </div>
 </li>
