--- a/site/pages/spase-inside.hbs
+++ b/site/pages/spase-inside.hbs
@@ -41,8 +41,8 @@ title: SPASE Inside
 				  Heliophysics Division.
 			   </div>
 
-			   <div class="topic top_space">HPDE Landing Page (<a target="_blank" href="https://hpde.io/">https://hpde.io/</a>)</div>
-			   <div class="indent">
+			   <div class="topic top_space">HPDE Landing Page (<a target="_blank" href="https://hpde1.net/">https://hpde1.net/</a>)</div>
+			   <div class="indent"
 				  Formatted information about each registered resource in the HPDE repositories.
 			   </div> 
 
