--- a/site/pages/services/index.hbs
+++ b/site/pages/services/index.hbs
@@ -12,7 +12,7 @@ title: SPASE Services
 <p>SPASE Resource IDs are assigned by naming authorities. In a global system naming authorities must be unique. 
 SPASE maintains the list of naming authorities used in our community. SPASE also administers the metadata registry 
 containing descriptions of common entities. These are available on <a href="https://github.com/hpde">GitHub</a>
-in the SMWG repository. SPASE also maintains <a href="https://hpde.io">landing pages</a> for all the resources 
+in the SMWG repository. SPASE also maintains <a href="https://hpde1.net">landing pages</a> for all the resources 
 described in the GitHub repositories.
 </p>
 </header>
@@ -56,14 +56,14 @@ described in the GitHub repositories.
 <h2>Landing Pages</h2>
 	<p>
 	SPASE generates formatted web pages for every SPASE description in the naming authority repositories. 
-  These can serve as <a href="https://hpde.io">landing pages</a> for a DOI assigned to the data or document. The landing pages are at:
+  These can serve as <a href="https://hpde1.net">landing pages</a> for a DOI assigned to the data or document. The landing pages are at:
   </p>
   <p>
-	<a href="https://hpde.io/">https://hpde.io/</a>
+	<a href="https://hpde1.net/">https://hpde1.net/</a>
   </p>
   <p>
   The landing page web site allow you to navigate to a particular landing page by clicking on a set of menus. You can also get directly to 
-  a landing page for a SPASE description by replacing the "spase://" in the resource ID with "https://hpde.io/".
+  a landing page for a SPASE description by replacing the "spase://" in the resource ID with "https://hpde1.net/".
 </p>
 
 </div>
