Updated hpde.io link after domain hijacking II

--- a/site/pages/spase-inside.hbs
+++ b/site/pages/spase-inside.hbs
@@ -41,7 +41,7 @@ title: SPASE Inside
 				  Heliophysics Division.
 			   </div>
 
-			   <div class="topic top_space">HPDE Landing Page (<a target="_blank" href="https://hpde1.net/">https://hpde1.net/</a>)</div>
+			   <div class="topic top_space">HPDE Landing Page (<a target="_blank" href="https://hpde1.org/">https://hpde1.org/</a>)</div>
 			   <div class="indent"
 				  Formatted information about each registered resource in the HPDE repositories.
 			   </div> 
