Updated metadata link to spase-metadata.org

--- a/site/layout/default.hbs
+++ b/site/layout/default.hbs
@@ -119,7 +119,7 @@ Space Physics Archive Search and Extract
 			<ul class='subnav'>
 				<li><a href='{{assets}}/services/index.html' target='_self'>Overview</a></li>
 				<li><a href='https://github.com/hpde/' target='_blank'>HPDE Metadata Registry</a></li>
-				<li><a href='https://hpde1.org/' target='_blank'>HPDE Landing Pages</a></li>
+				<li><a href='https://spase-metadata.org/' target='_blank'>HPDE Landing Pages</a></li>
 				<li><a href='{{assets}}/services/naming-authority.html' target='_self'>Naming Authorities</a></li>
 			</ul>
 		</div>
