Added rights metadata to descriptor header description

--- a/site/pages/data/schema/index.hbs
+++ b/site/pages/data/schema/index.hbs
@@ -23,6 +23,7 @@ title: SPASE XML Schema
 <pre>
 &lt;Spase xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
      xmlns="http://www.spase-group.org/data/schema" 
+     xmlns:rights="http://www.spase-group.org/data/schema"
      xsi:schemaLocation="http://www.spase-group.org/data/schema http://www.spase-group.org/data/schema/spase-2.3.1.xsd"&gt;
 </pre>
 The "schemaLocation" maps the target namespace (in this case "http://www.spase-group.org/data/schema") to a schema document.
