--- a/site/pages/data/index.hbs
+++ b/site/pages/data/index.hbs
@@ -25,7 +25,7 @@ metadata which describes it.
 <p>
 While the data model is neutral on how to it may be expressed, the preferred expression form is XML.
 There are <a href="schema/index.html">XML Schema</a> documents which can be used to generate and validate SPASE 
-compliant XML documents. There is also an <a href="xsl/spase.xsl">XML Stylesheet</a> you can use to generated an HTML formatted version 
+compliant XML documents. There is also an <a href="xsl/spase.xml">XML Stylesheet</a> you can use to generated an HTML formatted version 
 of a SPASE XML document.
 </p>
 <p>
@@ -38,22 +38,22 @@ The Resource Types currently in the <a href="model/index.html">base data model</
 
 {{#with baseModelVersions }}
 	<p>
-	<dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_Annotation">Annotation</a></dt><dd>Explanatory or descriptive information that is associated with another resource.</dd>
-	<dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_Catalog">Catalog</a></dt><dd>Listing of events or observational notes.</dd>
-  <dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_Collection">Collection</a></dt><dd>An aggregation of resources, which may encompass collections of one resource type as well as those of mixed types. </dd>
-	<dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_Document">Document</a></dt><dd>Plain or formatted text that may include graphics, sound, other multimedia data, or hypermedia references.</dd>
-	<dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_DisplayData">DisplayData</a></dt><dd>A graphical representation of data.</dd>
-	<dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_NumericalData">NumericalData</a></dt><dd>Data product stored as numerical values in a specified format.</dd>
-	<dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_Granule">Granule</a></dt><dd>An accessible portion of another resource.</dd>
-	<dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_Instrument">Instrument</a></dt><dd>A device that is used to sense and parameterize a physical phenomenon.</dd>
-  <dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_Model">Model</a></dt><dd>A physical or empirical (including data-driven) formulation used to represent or predict the dynamical or propagational behaviors of a system or a quantity. </dd>
-  <dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_ModelRun">ModelRun</a></dt><dd>Description of a model run, including the code ID, the run spatial and temporal description, and all the relevant inputs.</dd>
-	<dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_Observatory">Observatory</a></dt><dd>The host (spacecraft, network, facility) for instruments making observations.</dd>
-	<dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_Person">Person</a></dt><dd>An individual human being.</dd>
-	<dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_Registry">Registry</a></dt><dd>A location or facility where resources are catalogued.</dd>
-	<dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_Repository">Repository</a></dt><dd>A location or facility where resources are stored.</dd>
-	<dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_Service">Service</a></dt><dd>A location or facility that can perform a well-defined task.</dd>
-  <dt><a target="_blank" href="./model/spase-{{current.version}}/spase-{{flattenDot current.version}}_xsd.html#http___www.spase-group.org_data_schema_Spase_Software">Software</a></dt><dd>An application which can be installed, built or readily used.</dd>
+	<dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_Annotation">Annotation</a></dt><dd>Explanatory or descriptive information that is associated with another resource.</dd>
+	<dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_Catalog">Catalog</a></dt><dd>Listing of events or observational notes.</dd>
+  <dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_Collection">Collection</a></dt><dd>An aggregation of resources, which may encompass collections of one resource type as well as those of mixed types. </dd>
+	<dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_Document">Document</a></dt><dd>Plain or formatted text that may include graphics, sound, other multimedia data, or hypermedia references.</dd>
+	<dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_DisplayData">DisplayData</a></dt><dd>A graphical representation of data.</dd>
+	<dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_NumericalData">NumericalData</a></dt><dd>Data product stored as numerical values in a specified format.</dd>
+	<dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_Granule">Granule</a></dt><dd>An accessible portion of another resource.</dd>
+	<dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_Instrument">Instrument</a></dt><dd>A device that is used to sense and parameterize a physical phenomenon.</dd>
+  <dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_Model">Model</a></dt><dd>A physical or empirical (including data-driven) formulation used to represent or predict the dynamical or propagational behaviors of a system or a quantity. </dd>
+  <dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_ModelRun">ModelRun</a></dt><dd>Description of a model run, including the code ID, the run spatial and temporal description, and all the relevant inputs.</dd>
+	<dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_Observatory">Observatory</a></dt><dd>The host (spacecraft, network, facility) for instruments making observations.</dd>
+	<dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_Person">Person</a></dt><dd>An individual human being.</dd>
+	<dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_Registry">Registry</a></dt><dd>A location or facility where resources are catalogued.</dd>
+	<dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_Repository">Repository</a></dt><dd>A location or facility where resources are stored.</dd>
+	<dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_Service">Service</a></dt><dd>A location or facility that can perform a well-defined task.</dd>
+  <dt><a target="_blank" href="./model/spase-latest/spase-spase-latest_xsd.htm#http___www.spase-group.org_data_schema_Spase_Software">Software</a></dt><dd>An application which can be installed, built or readily used.</dd>
 	</p>
 {{/with}}
 
